2003-07-19  Derek Price  <derek@ximbiot.com>

	* getline.c (getdelim): Return ssize_t, as per getline.h.

2003-07-17  Derek Price  <derek@ximbiot.com>

	* getline.c: Merge some of Bruno Habile's changes from GNULIB including
	some he didn't quite finish, like renaming of n => linesize.
	* getline.h: Ditto.
	* getndelim2.c: Ditto.
	* getndelim2.h: Ditto.
	* getnline.c: Ditto.
	* getnline.h: Ditto.

2003-07-17  Derek Price  <derek@ximbiot.com>

	* getndelim2.c: New file.
	* getndelim2.h: Ditto.

	* Makefile.am (libcvs_a_SOURCES): Add getndelim2.h.
	* getline.h: Return ssize_t.
	* getnline.h: Ditto.
	* getline.c: Ditto and depend on getndelim2.
	* getnline.c: Ditto.

	* Makefile.in: Regenerated.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* getline.c: Don't include the unneeded unlocked-io.h.
	* getnline.c: Remove extra blank line.  Use GETNDELIM_NO_LIMIT rather
	than GETNLINE_NO_LIMIT.
	* getnline.h: Define GETNDELIM_NO_LIMIT rather than GETNLINE_NO_LIMIT.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* PROTO.h: Remove this file since some of our GNULIB sources no longer
	support compilers that can't handle prototypes.

	* md5.c: s/PROTO//.
	* md5.h: Ditto.
	* savecwd.c: Ditto.
	* savecwd.h: Ditto.
	* sighandle.c: Ditto.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* getline.h: Include config.h so to use the macros it defines.
	(Thanks to Steve McIntyre <stevem@cvshome.org> for the report.)

2003-07-16  Derek Price  <derek@ximbiot.com>

	* pathmax.h: New file.

	* Makefile.am (libcvs_a_SOURCES): Add pathmax.h.
	* system.h: Remove PATH_MAX stuff.

	* Makefile.in: Regenerated.

2003-07-16  Derek Price  <derek@ximbiot.com>

	* getnline.c: New file based on GNULIB and resubmitted to GNULIB.
	* getnline.h: Ditto.

	* Makefile.am (libcvs_a_SOURCES): Add new getnline.h.
	* getline.c: Import and hack version from GNULIB to prevent double
	prototype problem on 64-bit machines.  Resubmitted to GNULIB.
	* getline.h: Ditto.